improve overflow issue for image popups

--- a/app/assets/stylesheets/deck_view.css
+++ b/app/assets/stylesheets/deck_view.css
@@ -4,7 +4,7 @@
   margin: 20px 0px;
   width: 20%;
   border-radius: 4px;
-  overflow-y: auto;
+  overflow-y: visible;
   max-height: 100%;
 }
 
@@ -22,19 +22,19 @@
   position: relative;
   overflow: visible;
 }
-.card-name span {
+.modal {
   visibility: hidden;
   position: absolute;
   left: 50%;
   margin-top: -100px;
-  z-index: 99;
+  z-index: 1;
 }
 
 .card-name span img {
   height: 200px;
 }
 
-.card-name:hover span {
+.card-name:hover .modal {
   visibility: visible;
 }
 
@@ -47,7 +47,8 @@
 
 .deck-body {
   width: 100%;
-  height: 500px;
+  height: 600px;
+  padding-top: 50px;
   background-color: rgba(0, 0, 0, 0.6);
   border: 1px solid rgba(202, 131, 65, 1);
   display: flex;
@@ -57,6 +58,7 @@
   align-items: center;
   box-sizing: border-box;
   overflow-x: auto;
+  overflow-y: visible;
 }
 
 .deck-view {
